// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GroupsWithinCard component should render default view 1`] = `
<ForwardRef(GridLegacy)
  item={true}
  xs={12}
>
  <AdminCard
    accentHeader={true}
    title="Title"
  >
    <ForwardRef(GridLegacy)
      container={true}
      spacing={1}
    >
      <Memo
        groups={
          [
            [
              "test",
            ],
          ]
        }
      />
    </ForwardRef(GridLegacy)>
  </AdminCard>
</ForwardRef(GridLegacy)>
`;

exports[`GroupsWithoutCard component should render default view 1`] = `
[
  [
    <FieldGridItem
      field="test"
      group={
        [
          "test",
        ]
      }
    />,
  ],
]
`;

exports[`Section component should render default view 1`] = `
<ForwardRef(GridLegacy)
  container={true}
  spacing={1}
>
  <Memo
    disabled={false}
    title="Title"
  />
</ForwardRef(GridLegacy)>
`;

exports[`Section component should render default view 2`] = `
<ForwardRef(GridLegacy)
  container={true}
  spacing={1}
>
  <Memo
    disabled={false}
  />
</ForwardRef(GridLegacy)>
`;
